# ChessBot

./: .editorconfig  CMakeLists.txt  README.md
Chess/: CMakeLists.txt  Chess.cpp  Chess.h  bitboard.cpp  bitboard.h  board.h  game.h  game_tree.h  mailbox.cpp  mailbox.h  piece.h
Chess/board/: CMakeLists.txt  board.cpp  board.h  indexing.h  pieces.h  pretty_print.h
Chess/board/bitboard/: bitboard.cpp  bitboard.h
Chess/board/bitboards/: CMakeLists.txt  bitboards.cpp  bitboards.h
Chess/board/mailbox/: CMakeLists.txt  mailbox.cpp  mailbox.h
Chess/board/movegen/: CMakeLists.txt  move.h  movegen.cpp  movegen.h  tests.cpp
Chess/board/movegen/bitboard/: CMakeLists.txt  bitboard.cpp  bitboard.h
Chess/board/piece/: CMakeLists.txt  piece.h
Chess/myModules/binary/: binary.h  binary.md
include/myModules/binary/: binary.h
